--- a/products-trade/less/products-page/pages/_shopping-cart-page.less
+++ b/products-trade/less/products-page/pages/_shopping-cart-page.less
@@ -242,10 +242,11 @@
 			}
 
 			.save-as-wrap{
-				max-width: 230px;
 				background-color: @bg-light-grey;
 				padding:0;
-
+				@media (min-width: @screen-sm) {
+					max-width: 230px;
+				}
 				label{
 					.gothamBook;
 				}
